sidecar/envoy/envoy.yaml
# Envoy Proxy Configuration for A2A Traffic Interception
# This configuration sets up Envoy as a transparent proxy that intercepts
# all traffic and uses an external authorization service (ext_authz) to
# parse and log A2A messages.

admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address:
      protocol: TCP
      address: 127.0.0.1
      port_value: 9901

static_resources:
  listeners:
  # Inbound listener - receives traffic redirected by iptables
  - name: inbound_listener
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 15001  # Inbound traffic port
    listener_filters:
    # ORIGINAL_DST allows Envoy to know the original destination
    # before iptables redirected the traffic
    - name: envoy.filters.listener.original_dst
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: inbound_http
          codec_type: AUTO
          route_config:
            name: inbound_route
            virtual_hosts:
            - name: inbound_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: original_dst_cluster
          http_filters:
          # ext_authz filter - calls our A2A parser service
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              grpc_service:
                envoy_grpc:
                  cluster_name: ext_authz_service
                timeout: 5s
              with_request_body:
                max_request_bytes: 8192
                allow_partial_message: true
              failure_mode_allow: true  # Allow traffic if ext_authz crashes (fail open)
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  # Outbound listener - intercepts outbound traffic
  - name: outbound_listener
    address:
      socket_address:
        protocol: TCP
        address: 0.0.0.0
        port_value: 15002  # Outbound traffic port
    listener_filters:
    - name: envoy.filters.listener.original_dst
      typed_config:
        "@type": type.googleapis.com/envoy.extensions.filters.listener.original_dst.v3.OriginalDst
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: outbound_http
          codec_type: AUTO
          route_config:
            name: outbound_route
            virtual_hosts:
            - name: outbound_service
              domains: ["*"]
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: original_dst_cluster
          http_filters:
          - name: envoy.filters.http.ext_authz
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.ext_authz.v3.ExtAuthz
              transport_api_version: V3
              grpc_service:
                envoy_grpc:
                  cluster_name: ext_authz_service
                timeout: 5s
              with_request_body:
                max_request_bytes: 8192
                allow_partial_message: true
              failure_mode_allow: true  # Allow traffic if ext_authz crashes (fail open)
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  # ext_authz service cluster - our A2A parser
  - name: ext_authz_service
    connect_timeout: 1s
    type: STATIC
    load_assignment:
      cluster_name: ext_authz_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: 127.0.0.1
                port_value: 9001  # ext_authz gRPC port
    typed_extension_protocol_options:
      envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
        "@type": type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions
        explicit_http_config:
          http2_protocol_options: {}

  # Original destination cluster - forwards to actual target
  - name: original_dst_cluster
    connect_timeout: 5s
    type: ORIGINAL_DST
    lb_policy: CLUSTER_PROVIDED
    original_dst_lb_config:
      use_http_header: false
